# sidekick

./: .gitignore  CLAUDE.md  DESIGN.md  PRODUCT.md  README.md  app.py  os_vulns.py  os_vulns_grouped_response_example.json  os_vulns_response_exemple.json  pyproject.toml  requirements.txt  streamlit_app.py
.impeccable/: design.json
.impeccable/critique/: 2026-06-07T11-56-23Z__wiz-dashboard-ui-pages-mttr-py.md  2026-06-07T14-19-58Z__wiz-dashboard-ui-pages-mttr-py.md  2026-06-07T16-15-20Z__wiz-dashboard-ui-pages-os-vulns-py.md  2026-06-07T17-26-02Z__sidebar.md
.streamlit/: config.toml
ai/: ai_agents_discovery_queries.md  ai_framework.md  ai_issues_and_complience_overview.md  custom_score.md
ai/queries/: 4_guardrail_coverage.md  4_human_identity.md  6_IAM.MD
gas/: .clasp.json  .gitignore  README.md  esbuild.config.mjs  js_request_exemple.js  package-lock.json  package.json
gas/dev/: boot.js  (+2 more)
gas_ai/: .clasp.json  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
tests/: conftest.py  test_app.py  test_app_smoke.py  test_cache.py  test_charts.py  test_client.py  test_compaction.py  test_demo_generator.py  test_domain_rules.py  test_domains_page.py  test_drilldown.py  test_grouping.py  test_history.py  test_ledger.py  test_lifecycle.py  test_metrics.py  test_migrate.py  test_overview.py  test_pages.py  test_purge.py  test_reconcile.py  test_scan_history_page.py  test_schema.py  test_settings.py  test_settings_page.py  test_severity.py  test_snapshot.py  test_theme.py  test_transform.py  test_ui.py
wiz_dashboard/: __init__.py  config.py
(+220 files in other folders)
